[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "viz"
version = "0.1.0"
description = ""
authors = [
    { name="Farida Yusuf", email="f.yusuf@qmul.ac.uk" }
]
dependencies = [
    "torch",
    "matplotlib",
    "scikit-learn",
    "umap-learn",
    "numpy",
    "imageio",
    "pygifsicle",
]

# optional-dependencies = {
#     "example": [
#         "hydra-core",
#         "omegaconf",
#     ]
# }

[tool.flit.module]
name = "viz"